# aitrium-radiotherapy

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: aitrium-radiotherapy-ci.yml  aitrium-radiotherapy-release.yml
crates/aitrium_dvh/: Cargo.toml  README.md
crates/aitrium_dvh/examples/: check_dose.rs  test_coords.rs  test_dicom.rs  test_mask.rs  test_perf.rs  test_simple.rs  test_z_range.rs
crates/aitrium_dvh/scripts/: compare_dvh.py
crates/aitrium_dvh/src/: dicom_parser.rs  lib.rs  types.rs
crates/aitrium_dvh/src/dicom/: dose.rs  mod.rs  orientation.rs  structset.rs
crates/aitrium_dvh/src/engine/: distance.rs  dvh.rs  histogram.rs  interpolation.rs  margin.rs  mod.rs  orientation.rs  overlap.rs  z_interpolation.rs
crates/aitrium_dvh/src/geometry/: mask_raster.rs  matplotlib_poly.rs  mod.rs  polygon.rs
policies/templates/: aitrium_default.yaml  minimal_explicit.yaml  research_balanced.yaml  strict_phi_safe.yaml
schemas/: anonymization_policy.schema.json  error.schema.json  rt_anonymize_metadata.input.schema.json  rt_anonymize_metadata.output.schema.json  rt_anonymize_template_get.input.schema.json  rt_anonymize_template_get.output.schema.json  rt_anonymize_template_reset.input.schema.json  rt_anonymize_template_reset.output.schema.json  rt_anonymize_template_update.input.schema.json  rt_anonymize_template_update.output.schema.json  rt_dvh.input.schema.json  rt_dvh.output.schema.json  rt_dvh_metrics.input.schema.json  rt_dvh_metrics.output.schema.json  rt_inspect.input.schema.json  rt_inspect.output.schema.json  rt_margin.input.schema.json  rt_margin.output.schema.json
scripts/: build_release_manifest.py  check_schemas.py  dev-refresh.sh  smoke_mcp_startup.py
sdk/python/: README.md  pyproject.toml
sdk/python/aitrium_radiotherapy_client/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client_integration.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  types.ts
sdk/typescript/test/: client.integration.test.ts
skill/: SKILL.md
src/: lib.rs  main.rs  self_test.rs  types.rs
src/anonymize/: date.rs  engine.rs  mod.rs  parse.rs  policy.rs  report.rs  run.rs  uid.rs  validate.rs  writer.rs
src/inspect/: dose_reader.rs  mod.rs  plan_reader.rs  scanner.rs  structure_reader.rs
src/tools/: anonymize.rs  anonymize_template.rs  dvh.rs  inspect.rs  margin.rs  mod.rs
src/transport/: manual_jsonrpc.rs  mod.rs
tests/: anonymize.rs  tool_contract.rs
