[workspace]
members = ["."]
resolver = "2"

[package]
name = "aitrium-radiotherapy-server"
version = "0.1.5"
edition = "2021"
description = "MCP-compatible radiotherapy analysis server"
license = "MIT"
publish = false

[dependencies]
aitrium_dvh = { git = "https://github.com/NewLeaf-ai/aitrium-dvh.git", tag = "v0.1.0", default-features = false, features = ["memmap"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dicom = { version = "0.7", features = ["ndarray"] }
dicom-core = "0.7"
dicom-object = "0.7"
dicom-dictionary-std = "0.7"
walkdir = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rayon = "1.10"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
