[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitrium-radiotherapy-client"
version = "0.1.0"
description = "Python SDK for the aitrium-radiotherapy MCP tool server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
